[ADD] archivos todos juntos para trabajar

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-100">
+<html className="h-100">
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta charset="UTF-8" />
@@ -19,8 +19,8 @@
     <link rel="icon" href="/4geeks.ico" />
     <script defer="defer" src="/bundle.js"></script>
   </head>
-  <body class="h-100">
-    <div id="app" class="h-100"></div>
+  <body className="h-100">
+    <div id="app" className="h-100"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
