--- a/template.html
+++ b/template.html
@@ -19,6 +19,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   <script src="simplescrollup.js"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXVjmsUc4TuM2lJBKefhN9sQdkokwTP1Q&callback=initMap&v=weekly"
+    defer ></script>
 </body>
 
 </html>
